# 4-mcp-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_memory_tables.py
apps/api/: pyproject.toml
apps/api/src/ka_api/: __init__.py  deps.py  errors.py  main.py  orchestrator_client.py  schemas.py
apps/api/src/ka_api/routers/: __init__.py  actions.py  audit.py  chat.py  debug.py
apps/chat-console/: README.md  index.html  package-lock.json  package.json
apps/chat-console/scripts/: smoke_ui_contract.mjs
apps/chat-console/src/: App.tsx  api.ts  styles.css  types.ts
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/ka_orchestrator/: __init__.py  audit.py  confirmation.py  graph.py  json_util.py  main.py  pipeline.py  redis_state.py
apps/orchestrator/src/ka_orchestrator/agents/: __init__.py  analyst.py  executor.py  guard.py  researcher.py  router.py
data/corpus/leave/: 请假管理制度.md
data/corpus/policies/: 员工手册摘要.md
data/corpus/reimbursement/: 费用报销管理制度.md
data/corpus/travel/: 差旅与报销操作指引.md  差旅管理制度.md
data/eval_reports/: eval_20260718_081943.json
data/golden_set/: actions.md  golden_set.json  qa.md
docs/: MCP-AI-Agent集群-Knowledge-Action方案.md  MCP-Agent集群项目方向.md  agent-graph.md  architecture.md  demo-script.md  eval-report.md  方案B-详细实现流程.md  阶段0-工程骨架与本机依赖.md  阶段1-知识入库与Knowledge-MCP.md  阶段2-豆包Agent问答闭环.md  阶段3-FastAPI-Chat与审计API.md  阶段4-Business与审批闸门.md  阶段5-Memory与Guard与评测.md  阶段6-Chat-Console前端.md  阶段7-本地收尾与演示.md
mcp_servers/business/: pyproject.toml
mcp_servers/business/src/ka_business_mcp/: __init__.py  server.py  service.py
mcp_servers/comms/: pyproject.toml
mcp_servers/comms/src/ka_comms_mcp/: __init__.py  server.py
mcp_servers/knowledge/: pyproject.toml
mcp_servers/knowledge/src/ka_knowledge_mcp/: __init__.py  server.py  service.py
mcp_servers/memory/: pyproject.toml
mcp_servers/memory/src/ka_memory_mcp/: __init__.py  server.py  service.py
scripts/: check_local_deps.py  demo_cli.py  dev_api.ps1  dev_chat_console.ps1  dev_orchestrator.ps1  ingest_docs.py  run_eval.py  smoke_knowledge_mcp.py  smoke_phase7.ps1  start_local.ps1
tests/: test_action_gate.py  test_agent_qa_flow.py  test_api_chat.py  test_chat_console.py  test_guardrails.py  test_knowledge_search.py  test_phase0_skeleton.py  test_phase7_docs.py
