[project]
name = "ka-api"
version = "0.1.0"
description = "FastAPI business API"
requires-python = ">=3.11"
dependencies = [
    "ka-common",
    "ka-auth",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv.sources]
ka-common = { workspace = true }
ka-auth = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
