[project]
name = "ka-api"
version = "0.4.0"
description = "FastAPI business API"
requires-python = ">=3.11"
dependencies = [
    "ka-common",
    "ka-auth",
    "ka-orchestrator",
    "ka-business-mcp",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
]

[tool.uv.sources]
ka-common = { workspace = true }
ka-auth = { workspace = true }
ka-orchestrator = { workspace = true }
ka-business-mcp = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
