[project]
name = "ka-knowledge-mcp"
version = "0.1.0"
description = "Knowledge MCP Server"
requires-python = ">=3.11"
dependencies = [
    "ka-common",
    "ka-llm",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
]

[tool.uv.sources]
ka-common = { workspace = true }
ka-llm = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
