[project]
name = "ka-memory-mcp"
version = "0.5.0"
description = "Memory MCP Server"
requires-python = ">=3.11"
dependencies = [
    "ka-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
]

[tool.uv.sources]
ka-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
